--- a/dashboard/app/public/index.html
+++ b/dashboard/app/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <!-- <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
     <!--
@@ -19,11 +19,14 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>We Carry dashboard</title>
   </head>
   <body>
     <noscript>
       You need to enable JavaScript to run this app.
+      Ud. necesita habilitar JavaScript para correr esta aplicación.
+      Por favor escriba soporte@wecarry.com.ar
+      Gracias.
     </noscript>
     <div id="root"></div>
     <!--
